# Ground-Station

./: .gitignore  .gitmodules  build.bat  build.sh  commands.json  config.json  debug.js  default-config.json  idek.js  main.js  makers.txt  package-lock.json  package.json  preload.js  readme.md  test.json
.github/ISSUE_TEMPLATE/: base-new-issue-template.md
assets/: generateIcons.js  logo.icns
coders/: APRS.js  APRSCmd.js  APRSTelem.js  FD.js  Metrics.js  TODO.txt  build.sh
docs/configs/: commands.json  stateflags.json
docs/data/: metrics.csv  test-0.csv  test-1.csv  test-2.csv
docs/examples/: groundTransceiver.cpp  groundTransceiverTeensy.cpp
docs/examples/serial_v2_base/: platformio.ini
docs/examples/serial_v2_base/src/: GSInterface.cpp  GSInterface.h  main.cpp
icons/: build.sh
io/: text-io.js  video-io.js
io/text/: FileCommandSink.js  FileTelemSource.js  SerialCommandSink.js  SerialTelemSource.js  TextSink.js  TextSource.js
io/video/: FileVideoSource.js  SerialVideoSource.js  VideoSource.js
models/: rocket.mtl
serial/: APRS.js  CMakeLists.txt  LinuxNamedPipe.cpp  LinuxNamedPipe.h  LinuxSerialPort.cpp  LinuxSerialPort.h  LinuxSerialPort.hpp  NamedPipe.cpp  NamedPipe.h  PipeStream.js  SerialDevice.js  SerialPort.cpp  SerialPort.h  SerialPort.hpp  WinNamedPipe.cpp  WinNamedPipe.h  WinSerialPort.cpp  WinSerialPort.hpp  build.sh  crossPlatformDemux.cpp  definitions.cmake  demux.cpp  demuxFile.cpp  demuxShell.cpp  demuxShellForReal.cpp  demuxSimple.cpp  demuxSingle.cpp  driverShell.cpp  erm.js  filter.py  lin_test  linuxPipeTest.cpp  linuxTest.cpp  popup.html  recorder.cpp  serial.js  serialDevice.js  serialDriver.cpp  serialPipe.js  videoTest.js
serial/Message/: TODO.txt
serial/Message/src/APRS/: APRSCmd.h  APRSTelem.h  APRSText.h
serial/Message/src/GroundStation/: GSData.cpp  GSData.h
serial/NamedPipe/: CMakeLists.txt  LinuxNamedPipe.cpp  LinuxNamedPipe.h
serial/SerialPort/: CMakeLists.txt  LinuxSerialPort.cpp  LinuxSerialPort.h  SerialPort.h  WinSerialPort.cpp  WinSerialPort.h
serial/firmware/: GSInterface.cpp
serial/rscode-cpp/: CMakeLists.txt
serial/rscode-cpp/src/: rs.cpp
serial/tests/: linuxSerialTest.cpp
src/: build.sh  index.css  index.html  index.js  index_new.css  index_new.html  index_new.js
src/debug/: CmdList.js  debug.html  debug.js
src/fonts/: roboto.css
src/libraries/: APRS.js  babylonjs.min.loaders.js  cacheTile.js  charts.js
src/libraries/map/: map.js
src/libraries/map/leaflet/main/: leaflet-src.js
src/libraries/map/leaflet/tile-providers/: leaflet-providers-cache.js
src/libraries/video/: yuv-canvas.js
src/settings/: settings.css  settings.html  settings.js  settings_new.html  settings_new.js
src/streams/: streams.css  streams.html  streams.js
src/video/: myscript.js  video.css  video.html  video.js
testing/: erm.js  gulp.cpp  um2.cpp  umm.cpp
text/: FileTelemSource.js  SerialTelemSource.js  TextSource.js  text-io.js
utils/: build.sh  csvConvert.js  extractMetrics.js  readPipe.js
utils/gsm/: CMakeLists.txt  mux-gsm.cpp
video/: ChunkedVideoStream.js  FileStreamSource.js  FileVideoSource.js  RadioStreamSource.js  SerialStreamSource.js  SerialVideoSource.js  VideoSource.js  build.sh  buildFFmpeg.sh  renderer.js  streamProcessor.js  video-io.js  video-source.js  video.js
